<resources>
    <!--  AndroidManifest.xml  -->
    <string name="app_name">SpotifyWrapped</string>

    <!--  activity_start.xml  -->
    <string name="log_in_with_spotify">Log in with Spotify</string>
    <string name="spotify_wrapped">Spotify Wrapped</string>
    <string name="create_new_account">Or create new account</string>

    <!--  fragment_wrap.xml  -->
    <string name="title_wrap">Your Wrap</string>
    <string name="title_history">History</string>
    <string name="view_past_wraps">View Past Wraps</string>
    <string name="top_genres">Top Genres</string>
    <string name="save_my_wrap">Save my wrap</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_albums">Top Albums</string>

    <!--  fragment_update_account.xml  -->
    <string name="update_account_info">Update Account Info</string>
    <string name="change_password">Change Password</string>
    <string name="change_username_or_email">Update Login Info</string>
    <string name="delete_account">Delete Account</string>
    <string name="spotify_icon">spotify icon</string>

    <!--  navbar  -->
    <string name="home">Home</string>
    <string name="update_account_info_navbar">Account</string>
    <string name="wrapped">Wrapped</string>
    <string name="history">History</string>
    <string name="mixtape_memories">Mixtape Memories</string>
    <string name="_1_month_wrapped">Past Month</string>
    <string name="_6_months_wrapped">Past 6 Months</string>
    <string name="all_time_wrapped">All-time</string>
    <string name="one_month">1 Month</string>
    <string name="six_months">6 Months</string>
    <string name="all_time">All Time</string>

    <string name="user_name">User name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_create_new_account">or create new account</string>
    <string name="login">Login</string>
    <string name="new_username">New username</string>
    <string name="new_password">New password</string>

    <string name="export_as_image">Export as image</string>
    <string name="wrapped_summarized">Wrapped Summarized</string>


</resources>