<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN_BACKGROUND" >


    <TextView
        android:id="@+id/update_login_textview"
        style="@style/TEXT"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/circular_spotifytext_bold"
        android:text="@string/update_account_info"
        android:textSize="35sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <Button
        android:id="@+id/change_username_button"

        android:layout_width="250dp"
        android:layout_height="62dp"
        android:textSize="13sp"


        android:backgroundTint="@color/spotifyGreen"

        android:text="@string/change_username_or_email"
        android:textColor="@color/white"
        android:fontFamily="@font/circular_spotify"

        app:layout_constraintBottom_toTopOf="@+id/change_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_login_textview"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/change_password_button"

        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginBottom="216dp"

        android:backgroundTint="@color/spotifyGreen"

        android:text="@string/change_password"
        android:fontFamily="@font/circular_spotify"
        android:textColor="@color/white"
        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_login_textview"
        app:layout_constraintVertical_bias="0.609" />

    <ImageView
        android:src="@drawable/transparent"
        android:layout_width="135dp"
        android:layout_height="110dp"


        android:contentDescription="@string/spotify_icon"

        app:layout_constraintBottom_toTopOf="@+id/update_login_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <Button
        android:id="@+id/delete_account_button"
        style="@style/DELETE_ACCOUNT_BUTTON"


        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"

        android:text="@string/delete_account"
        android:textSize="14sp"
        android:fontFamily="@font/circular_spotifytext_black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />


</androidx.constraintlayout.widget.ConstraintLayout>