<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN_BACKGROUND"
    tools:context=".ui.history.HistoryFragment">


    <!--    <TextView-->
<!--        android:id="@+id/text_history"-->
<!--        style="@style/TEXT"-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->

<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->

<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.251" />-->

    <TextView
        android:id="@+id/textview_mixtape_memories"
        style="@style/TEXT"
        android:layout_width="277dp"
        android:layout_height="119dp"
        android:fontFamily="@font/circular_spotifytext_bold"
        android:text="@string/mixtape_memories"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/HISTORY_BUTTONS"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/gradient_history_one_month"
        android:text="@string/_1_month_wrapped"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_mixtape_memories"
        app:layout_constraintVertical_bias="0.87" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/HISTORY_BUTTONS"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/gradient_history_sixmonth"
        android:text="@string/_6_months_wrapped"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/HISTORY_BUTTONS"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/gradient_history_alltime"
        android:text="@string/all_time_wrapped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_mixtape_memories"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>